# sieve

./: .travis.yml  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml  rust.yml  test-and-cargo-deny-and-coverage.yml
examples/node/: Cargo.toml  README.md
examples/node/src/: main.rs
src/: batch.rs  classic.rs  config.rs  lib.rs  seen.rs  structs.rs  utils.rs
src/batched/: batch.rs  config.rs  mod.rs  utils.rs
src/system/: batch.rs  mod.rs  structs.rs  utils.rs
