[package]
name = "sieve"
version = "0.1.0"
authors = ["Ogier Bouvier <ars3nic@ars3nic.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", branch = "feature/refactor", features = [ "system" ] }
murmur = { git = "https://github.com/Distributed-EPFL/murmur", branch = "batched" }
serde = { version = "1.0" }
futures = "0.3"
snafu = { version = "0.6", features = [ "backtraces" ] }
tokio = { version = "1", features = [ "sync" ] }
tracing = "0.1"
structopt = { version = "0.3", optional = true }

[dev-dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", branch = "feature/refactor", features = [ "test" ] }
murmur = { git = "https://github.com/Distributed-EPFL/murmur", branch = "batched", features = [ "test" ] }

[features]
default = []
cli = [ "structopt", "murmur/cli" ]
test = [ "drop/test", "murmur/test" ]

