[package]
name = "sieve"
version = "0.1.0"
authors = ["Ogier Bouvier <ogier@bouvier.family>"]
edition = "2018"
readme = "README.md"
description = "An implementation of probabilistic consistent broadcast"
repository = "https://github.com/Distributed-EPFL/sieve"
license = "AGPL-3.0-or-later"

[dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", features = [ "system" ] }
murmur = { git = "https://github.com/Distributed-EPFL/murmur" }
serde = { version = "1.0" }
futures = "0.3"
snafu = { version = "0.6", features = [ "backtraces" ] }
tokio = { version = "1", features = [ "sync" ] }
tracing = "0.1"
tracing-futures = "0.2"
structopt = { version = "0.3", optional = true }
postage = "0.4"
derive_builder = "0.10"
tokio-stream = "0.1"

[dev-dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", features = [ "test" ] }
murmur = { git = "https://github.com/Distributed-EPFL/murmur", features = [ "test" ] }
tokio = { version = "1.0", features = [ "macros" ] }

[features]
default = []
cli = [ "structopt", "murmur/cli" ]
test = [ "drop/test", "murmur/test" ]

